# tccw-autoresearch

./: .agentihooks.json  .autoresearch.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.ci  README.md  _config.yml  index.md  pyproject.toml  ruff.toml  sonar-project.properties
.autoresearch/: config.yaml
.autoresearch/agents/copilot/: .env.example  CLAUDE.md
.autoresearch/agents/copilot/.claude/agents/: researcher.md
.autoresearch/agents/copilot/.claude/commands/: check-coverage.md  run-metric.md
.autoresearch/agents/copilot/.claude/rules/: autoresearch-agent.md  git-discipline.md
.autoresearch/agents/default/.claude/commands/: check-coverage.md
.autoresearch/agents/default/.claude/rules/: autoresearch-agent.md  git-discipline.md
.claude/: CLAUDE.local.md
.claude/skills/: autoresearch  onboard
.claude/skills/autoresearch/: SKILL.md
.claude/skills/onboard/scripts/: 01_validate_repo.sh  04_measure_baseline.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-ci-image.yml  ci.yml  integration.yml  pages.yml  release.yml  sonar-scan.yml  update-badges.yml  workflow.yaml
badges/: code-smells.json  coverage.json  duplications.json  quality-gate.json  vulnerabilities.json
docs/: 00-INDEX.md  0A-ARCHITECTURE.md  0B-QUICKSTART.md  1A-MARKER.md  1B-ENGINE.md  1C-METRICS.md  1D-STATE.md  1E-GATES.md  2A-CLI.md  2B-DAEMON.md  2C-WORKTREE.md  3A-AGENTS.md  3B-IDEAS-PROGRAM.md  3C-BUDGET-COUNTDOWN.md  4A-CONFIGURATION.md  4B-TELEMETRY.md  5A-TESTING.md  5Z-KNOWN-ISSUES.md  6A-HARNESS-RUFF.md  6B-PRODUCTION-DEPLOYMENT.md
harnesses/sonarqube/: README.md  sonar-baseline.sh  sonar-gate.sh  sonar-onboard.sh  sonar-scan.sh
harnesses/sonarqube/agents/sonar-fixer/: CLAUDE.md
harnesses/sonarqube/agents/sonar-fixer/.claude/: settings.json
operator/: AUTORESEARCH-FOR-AUDITS.md  AUTORESEARCH-PAPER.md  BLOCKS.md  SPECS.md  TODO.md  VISION.md
src/autoresearch/: __init__.py  agent_profile.py  cli.py  cli_utils.py  config.py  daemon.py  engine.py  finalize.py  gates.py  ideas.py  marker.py  metrics.py  program.py  results.py  state.py  telemetry.py  utils.py  worktree.py
src/autoresearch/.claude/skills/onboard/: SKILL.md  SKILL.md.pre-enforce-deter.bak
src/autoresearch/agents/default/: CLAUDE.md  settings.json
src/autoresearch/agents/default/hooks/: budget-countdown.sh
src/autoresearch/claude_home/.claude/skills/: autoresearch  onboard
src/autoresearch/skills/onboard/: SKILL.md  SKILL.md.pre-enforce-deter.bak  determinism-report.md
tests/: test_agent_profile.py  test_cli.py  test_cli_utils.py  test_config.py  test_daemon.py  test_engine.py  test_finalize.py  test_gates.py  test_ideas.py  test_marker.py  test_metrics.py  test_program.py  test_results.py  test_state.py  test_telemetry.py  test_utils.py  test_worktree.py
tests/fixtures/: invalid_marker.yaml  minimal_marker.yaml  stream_json_sample.jsonl  valid_marker.yaml
tests/integration/: conftest.py  test_e2e_real_claude.py  test_engine_stub.py  test_gate_chain.py  test_init.py  test_metric_extraction.py  test_worktree_lifecycle.py
tests/integration/fixtures/: claude-stub.sh  ruff_errors.py
(+12 files in other folders)
