[project]
name = "tccw-autoresearch"
version = "0.3.0"
description = "Agnostic autonomous improvement engine — point it at any codebase, it makes it measurably better overnight"
authors = [{name = "The Cloud Clock Work"}]
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
keywords = ["autoresearch", "autonomous", "improvement", "testing", "claude-code", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12",
    "croniter>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff>=0.4", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/The-Cloud-Clock-Work/tccw-autoresearch"
Repository = "https://github.com/The-Cloud-Clock-Work/tccw-autoresearch"
Issues = "https://github.com/The-Cloud-Clock-Work/tccw-autoresearch/issues"

[project.scripts]
autoresearch = "autoresearch.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoresearch"]

[tool.hatch.build.targets.sdist]
include = ["src/autoresearch"]

[tool.hatch.build.targets.wheel.force-include]
"src/autoresearch/.claude" = "autoresearch/.claude"
"src/autoresearch/agents" = "autoresearch/agents"
"src/autoresearch/skills" = "autoresearch/skills"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
